# AoC-2024

./: Cargo.toml  justfile
day-template/: Cargo.toml
day-template/benches/: benchmarks.rs
day-template/src/: part2.rs
days/day-01/: Cargo.toml
days/day-01/src/: part1.rs  part2.rs
days/day-02/: Cargo.toml
days/day-02/benches/: benchmarks.rs
days/day-02/src/: custom_error.rs  part1.rs
