[workspace]
resolver = "2"
members = ["days/day-*"]
default-members = ["days/day-*"]

[workspace.dependencies]
winnow = "0.6"
miette = { version = "7.2", features = ["fancy"] }
thiserror = "2.0.3"

dhat = { version = "0.3.3"}
divan = "0.1.14"
flamegraph = "0.6.5"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = true
